// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should display menu on toggler click 1`] = `
<div>
  <div
    class="dropdown-menu  mko_dmkujd-container"
  >
    <button
      aria-label="Open dropdown menu"
      class="button ripple button--icon  mko_c5ujei-button  mko_c5ujei-button_icon dropdown-menu__toggler  mko_dmkujd-toggler"
      icon="⚙︎"
      type="button"
    />
    <div>
      <ul
        class="dropdown-menu__menu  mko_dmkujd-menu  mko_dmkujd-menu_center"
        role="menu"
      >
        <li
          class="dropdown-menu__arrow  mko_dmkujd-arrow"
        />
        <li>
          Test item
        </li>
        <li>
          And another one!
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`should render with minimum props 1`] = `
<div>
  <div
    class="dropdown-menu  mko_dmkujd-container"
  >
    <button
      aria-label="Open dropdown menu"
      class="button ripple button--icon  mko_c5ujei-button  mko_c5ujei-button_icon dropdown-menu__toggler  mko_dmkujd-toggler"
      icon="⚙︎"
      type="button"
    />
    <div />
  </div>
</div>
`;
